--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -3,7 +3,7 @@
 INCLUDES = \
 	-DPACKAGE_DATA_DIR=\""$(datadir)"\" \
 	-DPACKAGE_LOCALE_DIR=\""$(prefix)/$(DATADIRNAME)/locale"\" \
-	@GTHREAD_CFLAGS@ @GTK_CFLAGS@ @OM_CFLAGS@
+	@GTHREAD_CFLAGS@ @GTK_CFLAGS@ @OM_CFLAGS@ @CURL_CFLAGS@
 
 bin_PROGRAMS = omnplay
 
@@ -14,7 +14,8 @@ omnplay_SOURCES = \
 	ui_buttons.c ui_buttons.h \
 	opts.c opts.h \
 	playlist.c \
+	library.c \
 	timecode.c timecode.h \
 	omnplay.cpp omnplay.h
 
-omnplay_LDADD = @GTHREAD_LIBS@ @GTK_LIBS@ @OM_LIBS@
+omnplay_LDADD = @GTHREAD_LIBS@ @GTK_LIBS@ @OM_LIBS@ @CURL_LIBS@
