--- a/configure.in
+++ b/configure.in
@@ -12,6 +12,8 @@ AM_PROG_CC_C_O
 AC_HEADER_STDC
 AC_PROG_CXX
 
+AC_CHECK_FUNCS(strsep)
+
 PKG_CHECK_MODULES(GTK, [gtk+-2.0 >= 1.3.13])
 AC_SUBST(GTK_CFLAGS)
 AC_SUBST(GTK_LIBS)
